--- a/index.html
+++ b/index.html
@@ -146,10 +146,11 @@
         .hero p {
             font-size: clamp(1.1rem, 2.5vw, 1.4rem);
             color: #a0a0a0;
-            margin-bottom: 48px;
+            margin: 0 auto 48px;
             max-width: 600px;
             position: relative;
             z-index: 1;
+            text-align: center;
         }
 
         .cta-button {
